# image-filters

./: build.gradle  dependencies.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/paliy/filters/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  auto_array_ptr.h  brightness.cpp  brightness.h  contrast.cpp  contrast.h  filter.h  filters-lib.cpp  filters-lib.h  gamma_correction.cpp  gaussian_blur.cpp  jAutoArrayPtr.h  pixel.cpp  pixel.h
app/src/main/cpp/include/: auto_array_ptr.h  brightness.h  contrast.h  filter.h  filters-lib.h  gamma_correction.h  gaussian_blur.h  jAutoArrayPtr.h  pixel.h
app/src/main/java/com/paliy/filters/: BrightnessFilter.java  ContrastFilter.java  GammaCorrection.java  ImageFilter.java  MainActivity.java  NativeFilters.java
app/src/main/java/com/paliy/filters/ui/: ImageAdapter.kt  MainActivity.kt  Thumbnail.kt
app/src/main/res/layout/: activity_main.xml  adapter_thumbnail_item.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/paliy/filters/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
